--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.pyc
 __pycache__
 db.sqlite3
-#media
+media
 
 # Backup files # 
 *.bak 
@@ -98,13 +98,13 @@ celerybeat-schedule.*
 *.sage.py 
 
 # Environments 
-#.env 
-#.venv 
-#env/ 
-#venv/ 
-#ENV/ 
-#env.bak/ 
-#venv.bak/ 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/ 
 
 # mkdocs documentation 
 /site 
